[package]
name = "galerie-montsouris"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "galerie-montsouris"
path = "src/main.rs"

[dependencies]
eframe            = { version = "0.31", features = ["wgpu"] }
egui              = "0.31"
image             = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff"] }
kamadak-exif      = "0.5"
clap              = { version = "4.6", features = ["derive"] }
serde             = { version = "1.0", features = ["derive"] }
toml              = "0.8"
serde_json        = "1.0"
lru               = "0.12"
seahash           = "4.1"
dirs              = "5.0"
crossbeam-channel = "0.5"
anyhow            = "1.0"
base64            = "0.22"
log               = "0.4"
env_logger        = "0.11"
arboard           = "3"
tempfile          = "3"

[dev-dependencies]

[profile.release]
lto = "thin"
opt-level = 3
